--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "single page application",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest ./src/app/**",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,30 @@
   "bugs": {
     "url": "https://github.com/nicolasmartello/react-simple-search/issues"
   },
-  "homepage": "https://github.com/nicolasmartello/react-simple-search#readme"
+  "homepage": "https://github.com/nicolasmartello/react-simple-search#readme",
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "jest": "^22.4.3",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "*",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "postcss-loader": "^2.1.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0"
+  }
 }
