Add main scss main structure and add some require packages in order to compile sass files
Add icon fonts and google fonts

Integrate searchBox and header component

Create Favorites container and Card component

components creation

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     "no-param-reassign": 0,
     "import/prefer-default-export": 0,
     "guard-for-in": 0,
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "react/prefer-stateless-function": false
   },
    "env": {
         "browser": false,
