--- a/package.json
+++ b/package.json
@@ -25,17 +25,24 @@
   "homepage": "https://github.com/nicolasmartello/react-simple-search#readme",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "import-glob-loader": "^1.1.0",
     "jest": "^22.4.3",
+    "node-sass": "^4.8.3",
     "react-hot-loader": "^3.1.3",
-    "react-redux": "*",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
@@ -43,9 +50,10 @@
   "dependencies": {
     "babel-preset-env": "^1.6.1",
     "postcss-loader": "^2.1.4",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
