--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest ./src/app/**",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --content-base ./public --config ./webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,8 @@
     "jest": "^22.4.3",
     "node-sass": "^4.8.3",
     "react-hot-loader": "^3.1.3",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.0.1",
@@ -48,7 +50,9 @@
     "webpack-dev-server": "^3.1.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-env": "^1.6.1",
+    "config": "^1.30.0",
     "postcss-loader": "^2.1.4",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
