--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-use-before-define": ["error", { "functions": false, "classes": true }],
     "no-useless-escape": 0,
     "no-param-reassign": 0,
+    "no-fallthrough": false,
     "import/prefer-default-export": 0,
     "guard-for-in": 0,
     "indent": ["error", 2],
